Use rc_max_rate if no video bit_rate was specified when muxing mxf_d10.

Fixes ticket #2945.

Reviewed-by: Matthieu Bouron
(cherry picked from commit d73565d5ddf41d4b7805327cdb271c59d8c3fc59)